--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body class="bg-gray-50">
     <div id="root"></div>
-    <script type="text/babel" src="App.jsx"></script>
+    <script type="text/babel" src="App.js"></script>
   </body>
 </html>
